--- a/_posts/2023-09-29-CEH-v12.md
+++ b/_posts/2023-09-29-CEH-v12.md
@@ -11,21 +11,22 @@ Wrapped up the CEH Practical on a regular Saturday in August, and followed it up
 
 While it is uncertain how directly applicable this write-up may be due to the periodic revisions in EC-Council's CEH syllabus, I figured I might as well share my insights for the benefit of those navigating the CEH.
 
-# Certified Ethical Hacker (Theory)
+### Resources I Had:
 
-## Resources I Had:
+- Boot Camp Class (Includes eCoureware, CyberQLabs and iLabs) [7/10]
+- [/r/CEH](https://www.reddit.com/r/CEH/) [10/10]
+- [Certified Ethical Hacker v12 Practice Exams by Viktor Afimov](https://www.udemy.com/course/ec-council-ceh/) [9/10]
 
-- Boot Camp Class (Includes eCoureware, CyberQLabs and iLabs)
-- /r/CEH
-
-TBC
-
-## Exam Strategy
+### Certified Ethical Hacker (Theory)
 
 TBC
 
-# Certified Ethical Hacker (Practical)
+#### Exam Strategy
 
-## Exam Strategy
+TBC
+
+### Certified Ethical Hacker (Practical)
+
+#### Exam Strategy
 
 TBC
