Edited CEH and CBROPS

--- a/_posts/2023-09-23-‎CBROPS.md
+++ b/_posts/2023-09-23-‎CBROPS.md
@@ -9,15 +9,15 @@ Note: As with any certifications, NDA/policy dictates that questions or answers 
 
 This was one of the two professional certifications sponsored by my employer, which includes a 5 day boot camp. As of writing, there appears to be a syllabus change; however, upon examining the differences, I don't believe they are significant. Therefore, the disparity is not as substantial as some might think.
 
-# Cisco Certified CyberOps Associate 200-201
+## Resources:
 
-## Resources I Had:
+- Boot Camp Class (Includes eCoureware, CyberQLabs and iLabs) [8.5/10]
+- [Cisco - CyberOps Associate v1 - Lecture Arthur Salmon](https://www.youtube.com/playlist?list=PL1U-z6tCj5WBwy4WoMS3jSi7WE4AGOUcY) [8/10]
 
-- Boot Camp Class
-- Cisco - CyberOps Associate v1 - Lecture Arthur Salmon https://www.youtube.com/playlist?list=PL1U-z6tCj5WBwy4WoMS3jSi7WE4AGOUcY
+## Cisco Certified CyberOps Associate 200-201
 
 TBC
 
-## Exam Strategy
+### Exam Strategy
 
 TBC
