Fixed CCSP Exam Cram Link

--- a/_posts/2024-01-12-CCSP.md
+++ b/_posts/2024-01-12-CCSP.md
@@ -9,11 +9,12 @@ Note: As with any certifications, NDA/policy dictates that questions or answers 
 
 TBC
 
-## Resources: 
+## Resources:
+
 - [CCSP Certified Cloud Security Professional All-in-One Exam Guide](https://www.amazon.com/Certified-Cloud-Security-Professional-Guide/dp/1259835464)
 - [(ISC)2 CCSP Certified Cloud Security Professional Official Study Guide](https://www.amazon.sg/Certified-Cloud-Security-Professional-Official/dp/1119277418) (8/10)
 - [(ISC)2 CCSP Certified Cloud Security Professional Official Practice Tests](https://www.amazon.com/Certified-Security-Professional-Official-Practice-dp-1119909406/dp/1119909406/ref=dp_ob_title_bk) (9/10)
-- [Pete Zerger's CCSP Exam Cram Full Course] (https://youtu.be/kFZWMZIy5LM)
+- [Pete Zerger's CCSP Exam Cram Full Course](https://youtu.be/kFZWMZIy5LM) (8/10)
 
 ## CCSP Certified Cloud Security Professional
 
@@ -22,5 +23,3 @@ TBC
 ## Exam Strategy
 
 TBC
-
-
