--- a/_posts/2024-01-12-CCSP.md
+++ b/_posts/2024-01-12-CCSP.md
@@ -2,7 +2,7 @@
 title: "ISC2 Power Duo Part 2 - CCSP"
 date: 2024-01-10 19:35:00 +0800
 categories: [Certifications]
-tags: [Certifications, CCSSP, ISC2]
+tags: [Certifications, CCSP, ISC2]
 ---
 
 Note: As with any certifications, NDA/policy dictates that questions or answers cannot be discussed here. The purpose of this post is simply to share experiences.
