Updated CBROPS, CISSP and CCSP

--- a/_posts/2023-09-23-‎CBROPS.md
+++ b/_posts/2023-09-23-‎CBROPS.md
@@ -7,17 +7,23 @@ tags: [Certifications, CBROPS, Cisco]
 
 Note: As with any certifications, NDA/policy dictates that questions or answers cannot be discussed here. The purpose of this post is simply to share experiences.
 
-This was one of the two professional certifications sponsored by my employer, which includes a 5 day boot camp. As of writing, there appears to be a syllabus change; however, upon examining the differences, I don't believe they are significant. Therefore, the disparity is not as substantial as some might think.
+This was one of the two professional certifications sponsored by my employer, which includes a 5 day boot camp. As of writing, there appears to be a syllabus change; however, upon examining the differences, I don't believe they are significant. Therefore, the disparity is not as substantial as some might think. The coureware provided also includes the official eCoureware, CyberQLabs and iLabs if that helps.
 
 ## Resources:
 
-- Boot Camp Class (Includes eCoureware, CyberQLabs and iLabs) [8.5/10]
+- Boot Camp Class [8/10]
 - [Cisco - CyberOps Associate v1 - Lecture Arthur Salmon](https://www.youtube.com/playlist?list=PL1U-z6tCj5WBwy4WoMS3jSi7WE4AGOUcY) [8/10]
 
 ## Cisco Certified CyberOps Associate 200-201
 
-TBC
+Contrary to popular belief, prior experience is not a prerequisite for CyberOps. For me, CyberOps was the first foray into the field of cybersecurity. With a "primary" focus on security analytics and incident response, I would say that the CyberOps aligns closely with the objectives of CompTIA's CySA+ (for those who are interested). 
+
+In contrast, the Security+ caters to those more inclined towards the secure design and implementation of computer systems. Nevertheless, it is still a very good fundamental certification for any entry level SOC Analyst.
 
 ### Exam Strategy
 
-TBC
+I firmly believe that the materials provided in a bootcamp class are comprehensive enough to grasp the essentials. However, recognizing that not everyone has the privilege to attend such classes, I highly recommend referring to online resources, particularly the lectures on YouTube mentioned above and the [Official Study Guide](https://www.amazon.sg/CyberOps-Associate-CBROPS-200-201-Official/dp/0136807836).
+
+Having briefly perused the study guide, I can confidently attest that its contents are more than sufficient for exam preparation. If you invest the time to genuinely understand the material, passing should be well within reach. Given the technical nature of the exam, it is VERY crucial to solidify your understanding of fundamental networking concepts and the cyber kill chain in my opinion. Mastering these should be golden.
+
+
