--- a/_posts/2023-09-29-CEH-v12.md
+++ b/_posts/2023-09-29-CEH-v12.md
@@ -15,17 +15,20 @@ While it is uncertain how directly applicable this write-up may be due to the pe
 
 - Boot Camp Class (Includes eCoureware, CyberQLabs and iLabs) [7/10]
 - [/r/CEH](https://www.reddit.com/r/CEH/) [10/10]
-- [Certified Ethical Hacker v12 Practice Exams by Viktor Afimov](https://www.udemy.com/course/ec-council-ceh/) [9/10]
+- [Certified Ethical Hacker v12 Practice Exams by Viktor Afimov](https://www.udemy.com/course/ec-council-ceh/) [15/10]
 
 ## Certified Ethical Hacker (Theory)
 
-TBC
+[Certified Ethical Hacker v12 Practice Exams by Viktor Afimov](https://www.udemy.com/course/ec-council-ceh/)
+The best set of practice question out there for CEH v12. Trust me.
 
 ### Exam Strategy
 
 TBC
 
 ## Certified Ethical Hacker (Practical)
+
+TBC
 
 ### Exam Strategy
 
