--- a/_posts/2024-01-11-CISSP.md
+++ b/_posts/2024-01-11-CISSP.md
@@ -7,7 +7,7 @@ tags: [Certifications, CISSP, ISC2]
 
 Note: As with any certifications, NDA/policy dictates that questions or answers cannot be discussed here. The purpose of this post is simply to share experiences.
 
-This post is long overdue, but it is what it is. I passed the CISSP with 125 questions in just an hour or so. Looking back, it was very insane and risky, but personally, I feel that the more I mull over a question, the more likely I am to get it wrong. I've come across advice that suggests not overthinking; if you are confident with the answer, just go with your gut feeling. I guess it worked out, and I'm happy to know that it did.
+This post is long overdue, but it is what it is. I passed the CISSP with **125 questions in just an hour** or so. Looking back, it was very insane and risky, but personally, I feel that the more I mull over a question, the more likely I am to get it wrong. I've come across advice that suggests not overthinking; if you are confident with the answer, just go with your gut feeling. I guess it worked out, and I'm happy to know that it did.
 
 ## Resources:
 
@@ -20,18 +20,22 @@ This post is long overdue, but it is what it is. I passed the CISSP with 125 que
 
 ## CISSP Certified Information Systems Security Professional
 
-Contrary to many, I did not use the official LearnZapp application. In my case, I firmly believe, from shared experiences with colleagues and the cyber community, that questions are there to reinforce concepts. I don't see the need to 'spam' various question banks; just the OSG/OPT will suffice.
+In contrast to many, I opted not to use the official LearnZapp application, and my overall readiness score amusingly stood at 47% :D. In my approach, I firmly believe that questions serve solely to reinforce concepts, and 'spamming' various question banks isn't a necessity; relying on the Official Study Guide (OSG) and Official Practice Tests (OPT) sufficed for me.
 
-Over a period of 2-3 months, I dedicated an hour or two after work to the Master Class course. On weekends, I occasionally visited the library for focused study sessions. After every domain, I did practice quizzes. My overall readiness score was 47%. In the week leading up to the exam, I took small practice tests on LearnZapp to identify the domains I was weak in and then reviewed those concepts using Destination Certification videos. On the nights before the exam, I reviewed the DestCert mind map videos.
+Over a span of three months, I committed an hour or two after work to the Master Class Course (huge shoutout to Rob!). Upon completing each domain, I found it beneficial to revisit the Question Bank specific to that domain to solidify my understanding. As the exam date approached, I gathered community questions from diverse sources and engaged in small practice tests, pinpointing domains where I needed improvement.
 
-Another caveat is that I don't take notes on the computer. It's a habit from university; taking notes on pen and paper allows me to understand and ingrain the concepts more clearly. Different people have different styles of learning, so don't follow blindly.
+To address weaker domains, I turned to Destination Certification videos for a comprehensive review. It is worth noting that I have a habit, carried over from university, of taking notes on pen and paper rather than the computer. This tactile approach helps me understand and internalize concepts more effectively. Learning styles vary, so it's crucial not to blindly follow any one method.
+
+On the nights leading up to the exam, I made sure to prioritize rest. The culmination of these strategies culminated in a successful exam experience. Remember, each person has their unique learning style, so feel free to adapt these techniques to suit your individual preferences.
 
 ## Exam Strategy
 
-TBC
+My only advice is to follow a systematic approach for each and EVERY question:
 
-Concentrate on the question at hand, and don't let any doubt from previous questions linger.
-For every question:
-Read the question at least three times.
-Identify the keywords.
-Policy > People > Process > Technology.
+1. Concentration: Concentrate solely on the question at hand, and block out any uncertainties from previous attempted questions.
+2. Triple Reading: Read the question a minimum of three times to ensure a thorough understanding of its nuances and requirements.
+3. Keyword Identification: Identify and highlight keywords within the question.
+4. Strong Mental: This exam kills you mentally. You will feel like you are a failure throughout the whole examination. It is important to keep yourself sane.
+5. Priority Order: Adhere to the priority order of Policy > People > Process > Technology. This hierarchy helps in structuring your response by addressing policy considerations first, followed by people, processes, and technology.
+
+Best of luck to anyone who is taking the exam in the future!
