--- a/_posts/2024-01-12-CCSP.md
+++ b/_posts/2024-01-12-CCSP.md
@@ -7,7 +7,9 @@ tags: [Certifications, CCSP, ISC2]
 
 Note: As with any certifications, NDA/policy dictates that questions or answers cannot be discussed here. The purpose of this post is simply to share experiences.
 
-TBC
+The CCSP turned out to be more challenging than I initially anticipated, especially considering my lack of hands-on cloud experience. I would strongly advise against attempting this certification if you're entirely new to the cloud. It might be beneficial to first study some fundamentals, such as the Amazon Certified Cloud Practitioner (CCP) or Azure Fundamentals, before taking on the CCSP.
+
+Personally, I invested around two hours in the exam, and the experience left me thoroughly exhausted. The depth and breadth of the content require a solid foundation, and hands-on cloud experience would undoubtedly ease the process. It may be a certification worth pursuing, but be sure to prepare adequately.
 
 ## Resources:
 
@@ -18,8 +20,16 @@ TBC
 
 ## CCSP Certified Cloud Security Professional
 
-TBC
+After completing the CISSP, I expected the CCSP to be relatively straightforward due to some overlap in cloud domains. However, I was surprised to find that it is more technical than I initially thought, lacking the anticipated managerial focus. Similar to my CISSP journey, I dedicated some time after work for self-study.
+
+Opting to forgo paid courses, I believed that the knowledge from CISSP SHOULD provide a solid foundation. While studying, I found the Official Study Guide (OSG), Official Practice Tests (OPT), and the All-In-One (AIO) guide to be essential resources. Despite finding the AIO somewhat challenging to read, many people in the community (and I) recognized this book is probably the best to prepare for the actual examination. Reading any OSG/AIO might be tough, however this sentiment is not unique to this certification, but holds true for various other certifications in general too.
+
+Self-study remains a viable path, but be prepared for a deep dive into cloud-specific technicalities.
 
 ## Exam Strategy
 
-TBC
+Unlike the CISSP, the CCSP demands a dynamic mindset – you can't always think like a manager. With every domain, your role switches, making it crucial to identify your stance in each question and make the appropriate choices. For managerial questions, I recommend following the guidelines from my CISSP journey. On the technical front, success boils down to how well you have studied the Official Study Guide (OSG) and All-In-One (AIO).
+
+One notable difference is that the CCSP is not a Computerized Adaptive Testing (CAT) exam, so the experience is less nerve-wracking. The key is to keep calm and maintain momentum. Remember, identifying your role in each question is pivotal, so adjust your mindset accordingly as you navigate through the diverse domains. Just stay focused, and keep moving forward.
+
+Good Luck!
