--- a/_posts/2024-01-11-CISSP.md
+++ b/_posts/2024-01-11-CISSP.md
@@ -35,7 +35,7 @@ My only advice is to follow a systematic approach for each and EVERY question:
 1. Concentration: Concentrate solely on the question at hand, and block out any uncertainties from previous attempted questions.
 2. Triple Reading: Read the question a minimum of three times to ensure a thorough understanding of its nuances and requirements.
 3. Keyword Identification: Identify and highlight keywords within the question.
-4. Strong Mental: This exam kills you mentally. You will feel like you are a failure throughout the whole examination. It is important to keep yourself sane.
-5. Priority Order: Adhere to the priority order of Policy > People > Process > Technology. This hierarchy helps in structuring your response by addressing policy considerations first, followed by people, processes, and technology.
+4. Mental Resilience: This exam DESTROYS you mentally. You will feel like you are failing throughout the whole examination. It is EXTREMELY important to keep a positive mindset.
+5. Priority Order: Adhere to the priority order of Policy/People > Process > Technology. This hierarchy helps in picking your answer by addressing policy/people considerations first, followed by processes, and technology.
 
 Best of luck to anyone who is taking the exam in the future!
