--- a/_posts/2024-01-11-CISSP.md
+++ b/_posts/2024-01-11-CISSP.md
@@ -20,13 +20,13 @@ This post is long overdue, but it is what it is. I passed the CISSP with **125 q
 
 ## CISSP Certified Information Systems Security Professional
 
-In contrast to many, I opted not to use the official LearnZapp application, and my overall readiness score amusingly stood at 47% :D. In my approach, I firmly believe that questions serve solely to reinforce concepts, and 'spamming' various question banks isn't a necessity; relying on the Official Study Guide (OSG) and Official Practice Tests (OPT) sufficed for me.
+In contrast to many, I opted not to use the official LearnZapp application, and my overall readiness score amusingly stood at 47% 😅. In my approach, I firmly believe that questions serve solely to reinforce concepts, and 'spamming' various question banks isn't a necessity; relying on the Official Study Guide (OSG) and Official Practice Tests (OPT) sufficed for me.
 
 Over a span of three months, I committed an hour or two after work to the Master Class Course (huge shoutout to Rob!). Upon completing each domain, I found it beneficial to revisit the Question Bank specific to that domain to solidify my understanding. As the exam date approached, I gathered community questions from diverse sources and engaged in small practice tests, pinpointing domains where I needed improvement.
 
 To address weaker domains, I turned to Destination Certification videos for a comprehensive review. It is worth noting that I have a habit, carried over from university, of taking notes on pen and paper rather than the computer. This tactile approach helps me understand and internalize concepts more effectively. Learning styles vary, so it's crucial not to blindly follow any one method.
 
-On the nights leading up to the exam, I made sure to prioritize rest. The culmination of these strategies culminated in a successful exam experience. Remember, each person has their unique learning style, so feel free to adapt these techniques to suit your individual preferences.
+On the nights leading up to the exam, I made sure to prioritize rest. Always good to keep a fresh mind for the actual exam. •⩊•
 
 ## Exam Strategy
 
