--- a/_posts/2023-09-29-CEH-v12.md
+++ b/_posts/2023-09-29-CEH-v12.md
@@ -13,23 +13,24 @@ While it is uncertain how directly applicable this write-up may be due to the pe
 
 ## Resources:
 
-- Boot Camp Class (Includes eCoureware, CyberQLabs and iLabs) [7/10]
+- Boot Camp Class (Includes eCoureware, CyberQLabs and iLabs) [8/10]
 - [/r/CEH](https://www.reddit.com/r/CEH/) [10/10]
 - [Certified Ethical Hacker v12 Practice Exams by Viktor Afimov](https://www.udemy.com/course/ec-council-ceh/) [15/10]
+- [CEH Practical: Complete Course & Exam 2023](https://www.udemy.com/course/ceh-practical-complete-course-exam/) [8/10]
 
 ## Certified Ethical Hacker (Theory)
 
-[Certified Ethical Hacker v12 Practice Exams by Viktor Afimov](https://www.udemy.com/course/ec-council-ceh/)
-The best set of practice question out there for CEH v12. Trust me.
+Not much to elaborate on the theoretical aspect. Utilize Viktor's question set, and you're set. The structure and question types are akin to the actual exam. Mastering that question bank is a key to acing the theory.
 
 ### Exam Strategy
 
-TBC
+Little to add – thorough preparation in advance using the materials I mentioned above will SHOULD ensure confidence heading into the exam.
 
 ## Certified Ethical Hacker (Practical)
 
-TBC
+Stepped up the complexity from earlier versions; not as straightforward. Managed to capture 18 out of 20 flags.
+Pay close attention to new topics like FQDN, Hacking WiFi, Android hacking, CVSS, Steganography, and Privilege Escalation. All the necessary information is covered in the e-courseware; be sure to search for these specific topics to enhance your understanding.
 
 ### Exam Strategy
 
-TBC
+With only one break, make it count. You only need 14 out of 20 to pass, so keep your cool. Some flags are easy to capture, so go for those. The VM might experience lag, depending on your exam time, so be sure to test CyberQ labs if you have access. The structure is very similar, so don't make the mistake I did and skip those.
