Updated CCSP Links

--- a/_posts/2024-01-12-CCSP.md
+++ b/_posts/2024-01-12-CCSP.md
@@ -13,10 +13,10 @@ Personally, I invested around two hours in the exam, and the experience left me 
 
 ## Resources:
 
-- [CCSP Certified Cloud Security Professional All-in-One Exam Guide](https://www.amazon.com/Certified-Cloud-Security-Professional-Guide/dp/1259835464)
-- [(ISC)2 CCSP Certified Cloud Security Professional Official Study Guide](https://www.amazon.sg/Certified-Cloud-Security-Professional-Official/dp/1119277418) (8/10)
-- [(ISC)2 CCSP Certified Cloud Security Professional Official Practice Tests](https://www.amazon.com/Certified-Security-Professional-Official-Practice-dp-1119909406/dp/1119909406/ref=dp_ob_title_bk) (9/10)
-- [Pete Zerger's CCSP Exam Cram Full Course](https://youtu.be/kFZWMZIy5LM) (8/10)
+- [CCSP Certified Cloud Security Professional All-in-One Exam Guide](https://www.amazon.com/Certified-Cloud-Security-Professional-Guide/dp/1259835464) (9/10)
+- [(ISC)2 CCSP Certified Cloud Security Professional Official Study Guide](https://www.amazon.sg/Certified-Cloud-Security-Professional-Official/dp/1119277418) (7/10)
+- [(ISC)2 CCSP Certified Cloud Security Professional Official Practice Tests](https://www.amazon.com/Certified-Security-Professional-Official-Practice-dp-1119909406/dp/1119909406/ref=dp_ob_title_bk) (8/10)
+- [Pete Zerger's CCSP Exam Cram Full Course](https://youtu.be/kFZWMZIy5LM) (7/10)
 
 ## CCSP Certified Cloud Security Professional
 
