--- a/_posts/2024-01-11-CISSP.md
+++ b/_posts/2024-01-11-CISSP.md
@@ -17,6 +17,7 @@ This post is long overdue, but it is what it is. I passed the CISSP with **125 q
 - [50 CISSP Practice Questions. Master the CISSP Mindset Video By Technical Institute of America](https://youtu.be/qbVY0Cg8Ntw?list=LL) (9/10)
 - ["Why You Will Pass the CISSP" Video By Kelly Handerhan](https://youtu.be/v2Y6Zog8h2A) (8/10)
 - [/r/CISSP](https://www.reddit.com/r/cissp) (7/10)
+- Community Curated Questions (8/10)
 
 ## CISSP Certified Information Systems Security Professional
 
@@ -38,4 +39,6 @@ My only advice is to follow a systematic approach for each and EVERY question:
 4. Mental Resilience: This exam DESTROYS you mentally. You will feel like you are failing throughout the whole examination. It is EXTREMELY important to keep a positive mindset.
 5. Priority Order: Adhere to the priority order of Policy/People > Process > Technology. This hierarchy helps in picking your answer by addressing policy/people considerations first, followed by processes, and technology.
 
-Best of luck to anyone who is taking the exam in the future!
+## Closing
+
+Best of luck to anyone who is taking the exam in the future! Have lots of fun! ( • ̀ω•́ )✧
