--- a/_posts/2024-01-12-CCSP.md
+++ b/_posts/2024-01-12-CCSP.md
@@ -32,4 +32,6 @@ Unlike the CISSP, the CCSP demands a dynamic mindset – you can't always think 
 
 One notable difference is that the CCSP is not a Computerized Adaptive Testing (CAT) exam, so the experience is less nerve-wracking. The key is to keep calm and maintain momentum. Remember, identifying your role in each question is pivotal, so adjust your mindset accordingly as you navigate through the diverse domains. Just stay focused, and keep moving forward.
 
-Good Luck!
+## Closing
+
+Do read up on some Cloud before attempting to start this certification. ( ´･･)ﾉ(.\_.`)
